--- a/src/Makefile
+++ b/src/Makefile
@@ -5,16 +5,22 @@ EXTRAFLAGS=-fsanitize=leak -fsanitize=address -fsanitize=undefined -fsanitize=un
 
 all: rebuild check 
 
-rebuild: clean_all show_str change_separator binary_div clean
+rebuild: clean_all show_str change_separator binary_div real_db clean
 
 show_str: clean show_str.c
-	$(CC) $(CFLAGS) $(EXTRAFLAGS) show_str.c -o $(BUILD_PATH)show_str 
+	$(CC) $(CFLAGS) $(EXTRAFLAGS) show_str.c sqlite3/sqlite3.o -o $(BUILD_PATH)show_str 
 	
 change_separator: clean change_separator.c
 	$(CC) $(CFLAGS) $(EXTRAFLAGS) change_separator.c -o $(BUILD_PATH)change_separator 
 	
 binary_div: clean binary_div.c
 	$(CC) $(CFLAGS) $(EXTRAFLAGS) binary_div.c -o $(BUILD_PATH)binary_div 
+	
+real_db: clean real_db.c
+	$(CC) $(CFLAGS) $(EXTRAFLAGS) real_db.c db_dal/db_layer.c db_dal/students_record.c common/errors.c common/logger.c sqlite3/sqlite3.o -o $(BUILD_PATH)real_db
+
+#sqlite3: sqlite3/sqlite3.o
+#	$(CC) -lpthread -ldl -o sqlite3/sqlite3.o -c sqlite3/sqlite3.c
 
 clean_all:
 	rm -rf *.o *.a *.so $(BUILD_PATH)*
@@ -24,4 +30,4 @@ clean:
 
 check:
 	clang-format *.c *.h common/*.c common/*.h -i
-	cppcheck --enable=all --suppress=missingIncludeSystem *.c *.h common/*.c common/*.h | grep ":"
+	# cppcheck --enable=all --suppress=missingIncludeSystem *.c *.h common/*.c common/*.h | grep ":"
